[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bloodhound-parser"
version = "2.2.0"
description = "Offline attack-path intelligence from BloodHound / SharpHound JSON collections"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Esteban Jiménez" }]
keywords = ["bloodhound", "sharphound", "active-directory", "red-team", "pentest", "adcs"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []  # standard library only

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/mrflippermen/BloodHound-Parser"
Issues = "https://github.com/mrflippermen/BloodHound-Parser/issues"

[project.scripts]
bh-parse = "parseSharpHound:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["parseSharpHound"]

[tool.ruff]
line-length = 110
target-version = "py38"

[tool.ruff.lint]
# Targeting Python 3.8, so we intentionally keep typing.List/Dict/Optional style
# (UP pyupgrade rules are not selected). Focus on real bugs + import hygiene.
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
